@@ -19,7 +19,6 @@ import org.eclipse.update.core.*;
 import org.eclipse.update.core.IFeature;
 import org.eclipse.update.core.IPluginEntry;
 import org.eclipse.update.internal.core.*;
-import org.eclipse.update.internal.core.UpdateManagerPlugin;
 import org.eclipse.update.internal.core.UpdateManagerUtils;
 /**
  * All Help System Test cases must subclass this base Testcase.
@@ -32,7 +31,7 @@ public abstract class UpdateManagerTestCase extends TestCase {
 	protected static String dataPath;
 
 	protected static URL SOURCE_FILE_SITE;
-	protected static URL SOURCE_FILE_SITE_INSTALLED;	
+	protected static URL SOURCE_FILE_SITE_INSTALLED;
 	protected static URL SOURCE_HTTP_SITE;
 	protected static URL TARGET_FILE_SITE;
 
@@ -55,9 +54,9 @@ public abstract class UpdateManagerTestCase extends TestCase {
 
 		IPluginDescriptor dataDesc = Platform.getPluginRegistry().getPluginDescriptor("org.eclipse.update.tests.core");
 		URL resolvedURL = Platform.resolve(dataDesc.getInstallURL());
-		URL dataURL = new URL(resolvedURL,DATA_PATH);
+		URL dataURL = new URL(resolvedURL, DATA_PATH);
 		dataPath = dataURL.getFile();
-		String homePath = (System.getProperty("user.home")).replace(File.separatorChar,'/');
+		String homePath = (System.getProperty("user.home")).replace(File.separatorChar, '/');
 
 		if (bundle == null) {
 			ClassLoader l = new URLClassLoader(new URL[] { dataURL }, null);
@@ -66,9 +65,9 @@ public abstract class UpdateManagerTestCase extends TestCase {
 
 		try {
 			SOURCE_FILE_SITE = new File(dataPath).toURL();
-			SOURCE_FILE_SITE_INSTALLED = new File(dataPath+"testAPI/").toURL();
-			SOURCE_HTTP_SITE = new URL("http", getHttpHost(),getHttpPort(), bundle.getString("HTTP_PATH_1"));
-			TARGET_FILE_SITE = new URL("file",null, homePath +"/target/");
+			SOURCE_FILE_SITE_INSTALLED = new File(dataPath + "testAPI/").toURL();
+			SOURCE_HTTP_SITE = new URL("http", getHttpHost(), getHttpPort(), bundle.getString("HTTP_PATH_1"));
+			TARGET_FILE_SITE = new URL("file", null, homePath + "/target/");
 		} catch (Exception e) {
 			fail(e.toString());
 			e.printStackTrace();
@@ -77,7 +76,7 @@ public abstract class UpdateManagerTestCase extends TestCase {
 		//cleanup target 
 		File target = new File(homePath + "/target/");
 		UpdateManagerUtils.removeFromFileSystem(target);
-		
+
 		// setup cache site to false
 		InternalSiteManager.globalUseCache = false;
 	}
@@ -119,36 +118,36 @@ public abstract class UpdateManagerTestCase extends TestCase {
 		// do nothing.
 	}
 
-	protected static String getHttpHost(){
+	protected static String getHttpHost() {
 		return UpdateTestsPlugin.getWebAppServerHost();
 	}
 
-	protected static int getHttpPort(){
+	protected static int getHttpPort() {
 		return UpdateTestsPlugin.getWebAppServerPort();
 	}
 
-	protected void remove(IFeature feature, IConfiguredSite configSite) throws CoreException{
+	protected void remove(IFeature feature, IConfiguredSite configSite) throws CoreException {
 		ISite site = configSite.getSite();
-		remove(feature,site);
+		remove(feature, site);
 	}
 
-	protected void remove(IFeature feature, ISite site) throws CoreException{
-		IFeatureReference ref = site.getFeatureReference(feature);
-			// remove the plugins and features dir
-			String sitePath = site.getURL().getFile();
-			File file = null;
-						
-			String featureName = feature.getVersionedIdentifier().getIdentifier().toString()+"_"+feature.getVersionedIdentifier().getVersion().toString();
-			file = new File(sitePath,"features"+File.separator+featureName);
-System.out.println("****************************************Removing :"+file);				
-				UpdateManagerUtils.removeFromFileSystem(file);		
-			
-			IPluginEntry[] entries = feature.getPluginEntries();
-			for (int i = 0; i < entries.length; i++) {
-				String name = entries[i].getVersionedIdentifier().getIdentifier().toString()+"_"+entries[i].getVersionedIdentifier().getVersion().toString()+File.separator;
-				file = new File(sitePath,"plugins"+File.separator+name);
-System.out.println("****************************************Removing :"+file);				
-				UpdateManagerUtils.removeFromFileSystem(file);
-			}
+	protected void remove(IFeature feature, ISite site) throws CoreException {
+		site.getFeatureReference(feature);
+		// remove the plugins and features dir
+		String sitePath = site.getURL().getFile();
+		File file = null;
+
+		String featureName = feature.getVersionedIdentifier().getIdentifier().toString() + "_" + feature.getVersionedIdentifier().getVersion().toString();
+		file = new File(sitePath, "features" + File.separator + featureName);
+		System.out.println("****************************************Removing :" + file);
+		UpdateManagerUtils.removeFromFileSystem(file);
+
+		IPluginEntry[] entries = feature.getPluginEntries();
+		for (int i = 0; i < entries.length; i++) {
+			String name = entries[i].getVersionedIdentifier().getIdentifier().toString() + "_" + entries[i].getVersionedIdentifier().getVersion().toString() + File.separator;
+			file = new File(sitePath, "plugins" + File.separator + name);
+			System.out.println("****************************************Removing :" + file);
+			UpdateManagerUtils.removeFromFileSystem(file);
+		}
 	}
 }
